--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="audio_silence">静音检测</string>
     <string name="audio_volume">修改音量</string>
     <string name="audio_reverb">混响</string>
+    <string name="audio_fade">渐变声</string>
     <string name="audio_surround">全景声</string>
     <string name="audio_add_equalizer">均衡器+</string>
     <string name="audio_effect">音效</string>
